@@ -1,3 +1,10 @@
+2019-06-12  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* tests/qnorMix-ex.R: renamed from tests/ex.R
+
+	* R/norMix.R (norMix): now *warn* about 'sig2';  use
+	`.Deprecated()` instead of warning() for all deprecation warnings.
+
 2019-01-21  Martin Mächler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 1.2-4
